k8s/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    # Increase buffer size if headers are too large
    nginx.ingress.kubernetes.io/proxy-buffer-size: '8k'
spec:
  rules:
    # - host: www.my-project.io
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: web
              servicePort: http
